--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,3 +10,5 @@
 @import "./portfolio-form.scss";
 @import "./portfolio-sidebar-list.scss";
 @import "./auth.scss";
+@import "./blog.scss";
+@import "./loaders.scss";
