--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -2,7 +2,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     // background-color: $offwhite;
+
+    .new-blog-link {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+
+        a {
+            font-size: 3em;
+            cursor: pointer;
+            color: $liteteal;
+            margin-right: 15px;
+            margin-bottom: 15px;
+            transition: 0.5s ease-in-out;
+
+            &:hover {
+                color: $teal;
+            }
+        }
+    }
 
     .content-container {
         display: flex;
